fix title card vertical alignment

--- a/posts/test-project/less/app.less
+++ b/posts/test-project/less/app.less
@@ -291,20 +291,13 @@ h1,h2,h3,h4,h5,h6,p,ul,ol,li {
         .instant {
             .transition(all 0 ease-in);
         }
+    }
 
-        .slidesContainer {
-            float: left;
-            position: relative;
-            height: 100%;
-            display: block;
-
-            .slide {
-                float: left;
-                height: 100%;
-                display: block;
-                overflow: auto;
-            }
-        }
+    .slide {
+        float: left;
+        height: 100%;
+        display: block;
+        overflow: auto;
     }
 }
 
